--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
   # subsequent runs, the service simply returns immediately, without performing
   # any modification to existing users.
   setup:
+    restart: always
     build:
       context: setup/
       args:
@@ -27,6 +28,7 @@ services:
       - elasticsearch
 
   elasticsearch:
+    restart: always
     build:
       context: elasticsearch/
       args:
@@ -50,6 +52,7 @@ services:
       - elk
 
   logstash:
+    restart: always 
     build:
       context: logstash/
       args:
@@ -71,6 +74,7 @@ services:
       - elasticsearch
 
   kibana:
+    restart: always
     build:
       context: kibana/
       args:
